Make projects.html more succinct

--- a/projects.html
+++ b/projects.html
@@ -6,27 +6,22 @@ permalink: /projects/
 
 <div class="row">
     <p>
-        As I move from secondary school, to university, to work, my free time has transitioned from being spent on building
-        apps for fun to spending time in various leadership and volunteering positions (described in detail over on my
-        <a href="https://www.linkedin.com/in/kelvzhan/">LinkedIn</a> profile). As software engineering projects become
-        my full-time work through university and my early career, this page will become ever-dormant with programming-heavy
-        side projects, but I will be sure to keep my LinkedIn and <a href="https://twitter.com/KelvZhan">Twitter</a> up
-        to date with my latest ventures!
+        Notable past projects from my secondary school and early university years. Check out my 
+        <a href="https://www.linkedin.com/in/kelvzhan/">LinkedIn</a> profile for more recent, leadership and volunteering
+        oriented work.
     </p>
+    
 
     <p>
-        <em>An important disclaimer:</em>
-        A few notable projects created in my free time over the years can be found below. Missing from the list below, however,
-        is the journey I took to develop my passion in software engineering: I still vividly remember finding my first
+        The below offers a glimpse into my early programming journey. I still vividly remember finding my first
         programming book at aged ten (<em>Visual Basic for Dummies</em>), building my
         <a href="https://github.com/kz/four-beat-tempo">first Android app</a> in 2014, going to my first hackathon (MLH
-        Launch Hack, which also happened to be the first ever Major League Hacking hackathon in the UK) the same October,
-        followed by building my first mock-startup in a summer camp at Boston at <a href="https://www.leangap.org/">Leangap</a>
-        in 2015.
+        Launch Hack) the same October, followed by building my first mock-startup in a summer camp in Boston at
+        <a href="https://www.leangap.org/">Leangap</a> in 2015.
     </p>
 
     <p>
-        I've been coding for a <em>long</em> time and you can find 50+ other projects <a href="https://github.com/kz?tab=repositories&q=&type=source&language=">on GitHub</a>,
+        You can find 50+ other projects <a href="https://github.com/kz?tab=repositories&q=&type=source&language=">on GitHub</a>,
         but do bear in mind that the majority of these were built before university, at a time where my focus was solely
         on coding, contrasting against my current focus of developing well-rounded software engineering and leadership
         skills.
